# react-native-vision-camera-spoof-detector

./: .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  index.d.ts  index.js  package.json
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  FaceAntiSpoofJSI.cpp  FastYuvJni.cpp  fast_yuv.cpp  fast_yuv.h
android/src/main/cpp/libyuv/: CMakeLists.txt
android/src/main/java/com/faceantispoof/: AcceleratorConfig.kt  ByteBufferPool.kt  FaceAntiSpoofFrameProcessor.kt  FaceAntiSpoofModule.kt  FaceAntiSpoofPackage.kt  FaceAntiSpoofingAdvanced.kt  FastYuv.kt  YuvToFloatArrayConverter.kt  YuvToRgbConverter.kt
android/src/main/res/values/: strings.xml
